2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.5

2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-contact-list-store.c: Allow to set custom 
	function for getting groups of a contact. Make possible to have groups
	for presence or role/affiliation in chatroom for example.
	* libempathy-gtk/gossip-contact-list-store.h: Allow to set custom
	function to handle DnD of contact. Useful when a custom function is set
	for groups.
	* src/empathy-chat-main.c: Minor fix.
	* TODO:
	* po/POTFILES.in: Updated.

2007-05-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/Makefile.am:
	* libempathy/empathy-tp-chat.c:
	* libempathy/empathy-contact-manager.c:
	* libempathy/empathy-contact-list.c: Fix indentation
	* libempathy/empathy-tp-contact-list.c: Fix not returning the contact
	in tp_contact_list_find()
	* TODO: Updated.

2007-05-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-contact-list-store.c:
	* libempathy-gtk/gossip-preferences.c:
	* libempathy-gtk/gossip-contact-list-store.h:
	* libempathy-gtk/gossip-contact-list.c:
	* libempathy-gtk/gossip-contact-list.h:
	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/gossip-contact-list-model.c:
	* libempathy-gtk/gossip-contact-list-model.h:
	* libempathy-gtk/Makefile.am:
	* libempathy/empathy-marshal.list: Split GossipContactList into
	two objects: GossipContactListStore inheriting from GtkTreeStore and
	GossipContactListView inheriting from GtkTreeView. This makes
	easier to build new UI widgets reusing the GtkTreeModel.

2007-05-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-idle.c: Auto away when session id idle, instead of
	when screensaver is active.

2007-05-18  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-private-chat.h:
	* libempathy-gtk/gossip-contact-list.c:
	* libempathy-gtk/gossip-chat.c:
	* libempathy-gtk/gossip-chat.h:
	* libempathy-gtk/gossip-chat-window.c: